--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "url": "https://github.com/ogwmnm/postcss-dpr-px.git"
   },
   "dependencies": {
-    "postcss": "^4.1.9"
+    "postcss": "^6.0.5"
   },
   "devDependencies": {
-    "gulp-eslint": "^0.12.0",
-    "gulp-mocha": "^2.0.1",
     "chai": "^2.3.0",
-    "gulp": "^3.8.11"
+    "gulp": "^3.8.11",
+    "gulp-eslint": "^0.12.0",
+    "gulp-mocha": "^2.0.1"
   },
   "scripts": {
     "test": "gulp"
